margin-left ".edit-custom-field .entry" to fix the alignment bug in #19518
before, the edit ui could be:

foo                     foo.png
Upload multiple files   bar.png
baz.png

this fix moves baz.png below "bar.png" instead of the label:

foo                     foo.png
Upload multiple files   bar.png
                        baz.png

--- a/share/html/NoAuth/css/base/misc.css
+++ b/share/html/NoAuth/css/base/misc.css
@@ -90,6 +90,10 @@ div.edit-custom-field .cflabel {
     padding-right: 0.5em;
 }
 
+div.edit-custom-field .entry {
+    margin-left: 10em;
+}
+
 .cflabel .name { font-weight: bold; }
 .cflabel .type { font-style: italic; }
 
